--- a/read_from_web.Rmd
+++ b/read_from_web.Rmd
@@ -82,3 +82,13 @@ nyc_water_json <-
 
 ```
 
+##BRFSS
+
+Same process, different data.
+```{r}
+brfss_smart2010 <- 
+  GET("https://chronicdata.cdc.gov/resource/acme-vg9e.csv",
+      query = list("$limit" = 5000)) %>% 
+  content("parsed")
+```
+
