--- a/read_from_web.Rmd
+++ b/read_from_web.Rmd
@@ -91,4 +91,17 @@ brfss_smart2010 <-
       query = list("$limit" = 5000)) %>% 
   content("parsed")
 ```
+## Some data aren't so nice
+
+Let's look at Pokemon..
+
+```{r}
+pokemon_data <-
+  GET("http://pokeapi.co/api/v2/pokemon/1") %>%
+  content()
+pokemon_data$name
+pokemon_data$height
+pokemon_data$abilities
+```
+## Closing  thougts
 
